rename page.css 1

--- a/signup_login.html
+++ b/signup_login.html
@@ -1738,7 +1738,7 @@
                                   aria-label="Back"
                                   role="button"
                                   type="button"
-                                  class="_u1thwpg"
+                                  class="account-container-mb__menu-btn"
                                 >
                                   <svg
                                     viewBox="0 0 32 32"
@@ -2196,7 +2196,7 @@
                                   aria-label="Back"
                                   role="button"
                                   type="button"
-                                  class="_u1thwpg"
+                                  class="account-container-mb__menu-btn"
                                 >
                                   <svg
                                     viewBox="0 0 32 32"
@@ -5002,7 +5002,7 @@
                                 aria-label="Back"
                                 role="button"
                                 type="button"
-                                class="_u1thwpg"
+                                class="account-container-mb__menu-btn"
                               >
                                 <svg
                                   viewBox="0 0 32 32"
@@ -5579,7 +5579,7 @@
                                 aria-label="Back"
                                 role="button"
                                 type="button"
-                                class="_u1thwpg"
+                                class="account-container-mb__menu-btn"
                               >
                                 <svg
                                   viewBox="0 0 32 32"
